--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
         "watch": "npm run local -- --watch"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/postcss7-compat": "^2.0.2",
+        "@tailwindcss/typography": "^0.3.1",
+        "autoprefixer": "^9.8.6",
         "cross-env": "^3.2.3",
         "laravel-mix": "^5.0.5",
         "laravel-mix-jigsaw": "^1.1.0",
+        "postcss": "^7.0.35",
         "postcss-import": "^12.0.0",
-        "tailwindcss": "^1.9.6",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "vue-template-compiler": "^2.6.12"
     }
 }
