--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "postcss": "^7.0.35",
         "postcss-import": "^12.0.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+        "tailwindcss-debug-screens": "^2.0.0",
         "vue-template-compiler": "^2.6.12"
     }
 }
