Alpine.JS added

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "watch": "npm run local -- --watch"
     },
     "devDependencies": {
+        "@ryangjchandler/alpine-clipboard": "^0.2.0",
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/postcss7-compat": "^2.0.2",
         "@tailwindcss/typography": "^0.3.1",
+        "alpinejs": "^2.8.0",
         "autoprefixer": "^9.8.6",
         "cross-env": "^3.2.3",
         "laravel-mix": "^5.0.5",
