--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@ryangjchandler/alpine-clipboard": "^0.2.0",
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/line-clamp": "^0.1.0",
         "@tailwindcss/postcss7-compat": "^2.0.2",
         "@tailwindcss/typography": "^0.3.1",
         "alpinejs": "^2.8.0",
