--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "tightenco/jigsaw": "^1.3",
+        "nesbot/carbon": "^2.43"
     },
     "autoload": {
         "psr-4": {
