--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "tightenco/jigsaw": "^1.3",
-        "nesbot/carbon": "^2.43"
+        "nesbot/carbon": "^2.43",
+        "samdark/sitemap": "^2.2"
     },
     "autoload": {
         "psr-4": {
