--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "tightenco/jigsaw": "^1.3",
         "nesbot/carbon": "^2.43",
-        "samdark/sitemap": "^2.2"
+        "samdark/sitemap": "^2.2",
+        "spatie/schema-org": "^3.3"
     },
     "autoload": {
         "psr-4": {
